# balance-api

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  shell.nix  uwsgi.ini
.github/workflows/: docker-image.yml  semantic-release.yml
alembic/: env.py
alembic/versions/: 0ce5b4e2f2cb_create_accounts_table.py  3a95d65ab7e1_create_split_transaction_table.py  5b1cc7298dbe_create_transactions_table.py  616e66ae7df2_create_account_mappers.py  a440eb3310a5_add_unique_constraint_to_user_email.py  a4c1e7240a0c_create_assets_and_transaction_asset_table.py  a4c1e7240a0c_create_assets_table.py  a8c0c8235c5f_create_transaction_asset_table.py  a8c0c8235c5f_create_transaction_assets_table.py  b422e1921e79_create_user_table.py  d964d0ccd9c6_add_currency_to_account.py  df76125d06a9_create_accounts_tags.py  df76125d06a9_create_tags.py
balance_api/: __main__.py  app.py  config.py  exceptions.py  migrate.py
balance_api/api/: __init__.py  account_tags.py  accounts.py  assets.py  reports.py  split_transactions.py  tags.py  transactions.py  users.py
balance_api/api/security/: __init__.py  oauth.py
balance_api/connection/: db.py
balance_api/data/: db.py
balance_api/data/dtos/: accounts.py  split_transactions.py  tags.py  transactions.py  users.py
balance_api/data/models/: __init__.py  account_mappers.py  accounts.py  assets.py  split_transactions.py  tags.py  transaction_assets.py  transactions.py  users.py
balance_api/models/: __init__.py  account_mappers.py  account_tags.py  accounts.py  assets.py  split_transactions.py  tags.py  transaction_asset.py  transactions.py  users.py
balance_api/openapi/: spec.yaml
balance_api/services/: tags.py
balance_api/transactions/: __init__.py
balance_api/transactions/loader/: __init__.py
test/: assets.sql  conftest.py  docker-compose.yml
test/api/: test_transactions_api.py
tests/: conftest.py  docker-compose.yml
tests/fixtures_data/: sample_transactions.csv  sample_transactions.xlsx
tests/test_api/: test_api_accounts.py  test_api_transactions.py  test_api_users.py  test_transactions_api.py
tests/test_models/: test_transactions.py
tests/test_transactions/: test_readers_csv.py  test_readers_xlsx.py
(+5 files in other folders)
