[tool.poetry]
name = "balance-api"
version = "0.1.0"
description = ""
authors = ["Juliano Vidal <juliano.vidal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
connexion = "^2.14.2"
alembic = "^1.12.0"
flask-compress = "^1.14"
flask-cors = "^4.0.0"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.7"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
backoff = "^2.2.1"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"


[tool.poetry.group.production.dependencies]
uwsgi = "^2.0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
