[tool.poetry]
name = "balance-api"
version = "0.1.0"
description = ""
authors = ["Juliano Vidal <juliano.vidal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-cors = "^4.0.1"
flask-compress = "^1.15"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = {extras = ["asymmetric-crypto"], version = "^4.6.0"}
alembic = "^1.13.2"
psycopg = {extras = ["binary"], version = "^3.2.1"}
backoff = "^2.2.1"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.2"


[tool.poetry.group.production.dependencies]
uwsgi = "^2.0.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
