[project]
name = "balance-api"
version = "1.0.0"
description = "My Personal Balance API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "backoff>=2.2.1",
    "flask>=3.1.1",
    "flask-compress>=1.17",
    "flask-cors>=6.0.1",
    "flask-jwt-extended[asymmetric-crypto]>=4.7.1",
    "flask-sqlalchemy>=3.1.1",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3.2.9",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
]
production = [
    "uwsgi>=2.0.30",
]
release = [
    "python-semantic-release>=10.1.0",
]

[tool.semantic_release]
commit_parser = "conventional"
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "(main|master|feat/github-actions)"